--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "baseHref": "https://munsy.github.io/munsy.github.io/",
+              "baseHref": "https://munsy.github.io/art/",
               "budgets": [
                 {
                   "type": "initial",
