--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "http://munsy.github.io/",
+              "baseHref": "http://munsy.github.io/art/",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
