--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ matrix:
         - go build
         - mkdir -p travis_deploy
         - mv art travis_deploy/
+        - mv startup.sh travis_deploy/
       deploy:
         - provider: s3
           access_key_id: $AWS_KEY
