--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,12 @@
-sudo: false
+os: linux
+
+language: ruby
 
 notifications:
   email: false
 
-matrix:
+jobs:
   include:
-    - language: node_js
-      node_js: "10"
-      cache:
-        directories:
-          - ./node_modules
-      install:
-        - npm install
-      script:
-        - npm run-script build
-      deploy:
-        - provider: pages
-          skip_cleanup: true
-          keep_history: true
-          token: $GITHUB_TOKEN
-          local_dir: dist/site
-          on:
-            branch: master
     - language: go
       go: "1.13.x"
       install:
@@ -53,5 +38,22 @@ matrix:
           bundle_type: zip
           application: 'art'
           deployment_group: 'art'
-          region: 'us-west-1'
+          region: us-west-1
           on: *2
+    - language: node_js
+      node_js: "10"
+      cache:
+        directories:
+          - ./node_modules
+      install:
+        - npm install
+      script:
+        - npm run-script build
+      deploy:
+        - provider: pages
+          cleanup: false
+          keep_history: true
+          token: $GITHUB_TOKEN
+          local_dir: dist/site
+          on:
+            branch: master
