--- a/.travis.yml
+++ b/.travis.yml
@@ -47,19 +47,12 @@ jobs:
           on:
             branch: master
         - provider: codedeploy
-          bucket: 'art-production'
-          access_key_id: $AWS_KEY
-          secret_access_key: $AWS_SECRET
-          key: latest.zip
-          bundle_type: zip
-          application: 'art'
-          deployment_group: 'art'
-
           revision_type: github
           access_key_id: $AWS_KEY
           secret_access_key: $AWS_SECRET
           application: "art"
           deployment_group: "art"
+          bucket: "art-production"
           region: "us-west-1"
           on:
             branch: master
