--- a/.travis.yml
+++ b/.travis.yml
@@ -36,15 +36,17 @@ jobs:
         - go test -v -race ./... 
         - go build
         - mkdir -p travis_deploy
+        - mkdir -p dist
         - mv art travis_deploy/
         - mv startup.sh travis_deploy/
         - zip -r art.zip travis_deploy/
+        - mv art.zip dist/
       deploy:
         - provider: s3
           bucket: "art-production"
           access_key_id: $AWS_KEY
           secret_access_key: $AWS_SECRET
-          local_dir: travis_deploy
+          local_dir: dist
           skip_cleanup: true
           region: "us-west-2"
           on:
