--- a/.travis.yml
+++ b/.travis.yml
@@ -39,13 +39,11 @@ jobs:
         - zip -r art.zip client/ *.go go.*
         - mv art.zip dist/
       deploy:
-        - provider: elasticbeanstalk
+        - provider: s3
           secret_access_key: $AWS_SECRET
           access_key_id: $AWS_KEY
           region: "us-west-2"
           bucket: "art-production"
-          app: "art-production"
-          env: "art-production"
           local_dir: dist
           skip_cleanup: true
           on:
