--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,18 @@ jobs:
         - go build
         - mkdir -p dist
         - zip -r art.zip client/ *.go go.*
-        # - mv art.zip dist/
+        - cp art.zip dist/art.zip
       deploy:
+        - provider: s3
+          secret_access_key: $AWS_SECRET
+          access_key_id: $AWS_KEY
+          region: "us-west-2"
+          bucket: "art-production"
+          local_dir: dist
+          skip_cleanup: true
+          edge: true
+          on:
+            branch: master
         - provider: elasticbeanstalk
           secret_access_key: $AWS_SECRET
           access_key_id: $AWS_KEY
@@ -46,8 +56,8 @@ jobs:
           app: "art-production"
           env: "art-production"
           bucket: "art-production"
+          zip_file: "art.zip"
           skip_cleanup: true
           edge: true
           on:
             branch: master
-          # local_dir: dist
