--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ jobs:
           on:
             branch: master
         - provider: elasticbeanstalk
+          description: "travis-deployment"
           secret_access_key: $AWS_SECRET
           access_key_id: $AWS_KEY
           region: "us-west-2"
@@ -57,7 +58,8 @@ jobs:
           env: "art-production"
           bucket: "art-production"
           zip_file: "art.zip"
-          skip_cleanup: true
+          wait_until_deployed: true
+          cleanup: true
           edge: true
           on:
             branch: master
