--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
       deploy:
         - provider: pages
           cleanup: true
-          keep_history: true
+          keep_history: false
           token: $GITHUB_TOKEN
           local_dir: dist/site
           on:
