--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ jobs:
         - npm run-script build
       deploy:
         - provider: pages
-          cleanup: true
-          keep_history: false
+          cleanup: false
+          keep_history: true
           token: $GITHUB_TOKEN
           local_dir: . #dist/site
           on:
