--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ jobs:
         - npm run-script build
       deploy:
         - provider: pages:git
-          edge: true
           cleanup: false
           keep_history: true
           token: $GITHUB_TOKEN
           local_dir: dist/site
+          #edge: true
     - language: go
       go: "1.13.x"
       install:
