--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
         - go build
         - mkdir -p dist
         - zip -r art.zip client/ *.go go.* art
-        - cp art.zip dist/art.zip
+        - mv art.zip dist/art.zip
       deploy:
         - provider: s3
           secret_access_key: $AWS_SECRET
