--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ os: linux
 
 language: node_js
 
+services:
+  - docker
+
 notifications:
   email: false
 
@@ -22,6 +25,14 @@ jobs:
         - zip -r art.zip client/ *.go go.* 
         - cp art.zip dist/art.zip
       deploy:
+        - provider: script
+          before_install:
+            - cp ./ui/Dockerfile ./Dockerfile
+            - docker build -t munsy/art:ui .
+            - rm ./Dockerfile
+          script: bash build/dockerhub-push-ui.sh
+          on:
+            branch: master
         - provider: s3
           secret_access_key: $AWS_SECRET
           access_key_id: $AWS_KEY
@@ -53,6 +64,14 @@ jobs:
       script:
         - npm run-script build
       deploy:
+        - provider: script
+          before_install:
+            - cp ./ui/Dockerfile ./Dockerfile
+            - docker build -t munsy/art:ui .
+            - rm ./Dockerfile
+          script: bash build/dockerhub-push-ui.sh
+          on:
+            branch: master
         - provider: pages
           skip_cleanup: true
           token: $GITHUB_TOKEN
