--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
             - docker build -t munsy/art:ui .
             - rm ./Dockerfile
           script: bash build/dockerhub-push-ui.sh
+          skip_cleanup: true
           on:
             branch: master
         - provider: s3
@@ -70,6 +71,7 @@ jobs:
             - docker build -t munsy/art:ui .
             - rm ./Dockerfile
           script: bash build/dockerhub-push-ui.sh
+          skip_cleanup: true
           on:
             branch: master
         - provider: pages
