--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,36 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "docker": {
+              "baseHref": "/",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
@@ -75,6 +105,9 @@
           "configurations": {
             "production": {
               "browserTarget": "site:build:production"
+            },
+            "docker": {
+              "browserTarget": "site:build:docker"
             }
           }
         },
@@ -123,6 +156,9 @@
           "configurations": {
             "production": {
               "devServerTarget": "site:serve:production"
+            },
+            "docker": {
+              "devServerTarget": "site:serve:docker"
             }
           }
         }
