--- a/angular.json
+++ b/angular.json
@@ -70,7 +70,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "with": "src/environments/environment.docker.ts"
                 }
               ],
               "optimization": true,
