--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "container",
+            "outputPath": "dist/site",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,6 +66,7 @@
               ]
             },
             "docker": {
+              "outputPath": "container",
               "baseHref": "/",
               "fileReplacements": [
                 {
